# hamster-agent

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  main.cpp  script-initd.sh  script.sh
build_prepere/: README.md  install_all.sh  install_boost.sh  install_cppdb.sh  install_libdbus-c++.sh  install_msgpack.sh  install_soci.sh  install_sqlite3.sh  install_yb-orm.sh
cmake/Modules/: FindDBusCpp.cmake  FindMsgPack.cmake
example/: sample.xml
include/: Deamon.h  Hamster_proxy.hpp  Parser.h  SignalHandler.hpp
resources/: CMakeLists.txt  create-dbus-proxy-header.sh  script-initd.sh.in
source/: CMakeLists.txt  Daemon.cpp  Daemon.hpp  Data.h  Exception.h  Hamster_proxy.hpp  ParserXML.cpp  SignalHandler.cpp  SignalHandler.hpp  Utils.h  config.h.in  main.cpp
src/: Daemon.cpp  Data.cpp  Deamon.cpp  Makefile  SignalHandler.cpp  Storage.cpp  Utils.cpp  Utils.h  main.cpp
src/model/: Data.cpp  Data.h  Database.cpp  Database.h  DatabaseOperation.h  Fact.h  Model.h  Parser.h  ParserXML.cpp  ParserXML.h
src/model/db/: Hamster_proxy.hpp  Storage.h  service.xml
